syntax = "proto3";

package inventory;

service InventoryService {
  rpc checkStock(StockRequest) returns (StockResponse);
  rpc updateStock(UpdateStockRequest) returns (UpdateStockResponse);
}

message StockRequest {
  int32 productId = 1;
}

message StockResponse {
  int32 id = 1;
  int32 quantity = 2;
}

message UpdateStockRequest {
  int32 productId = 1;
  int32 quantity = 2;
}

message UpdateStockResponse {
  bool updated = 1;
}
